@@ -1988,7 +1988,8 @@ Alan Balasuar <balasuar at gmail dot com>
 Will Chai <willchai at 126 dot com>
 Paul Koch <paul dot koch at mci dot com>
 Dave Giovannini <giovanninid at ociweb dot com>
-
+Dave Varnell <Dave dot Varvell at ni dot com>
+Howard Finer <hfiner at sonusnet dot com>
 
 I would particularly like to thank Paul Stephenson, who worked with me
 at Ericsson in the early 1990's.  Paul devised the recursive Makefile
